@@ -28,12 +28,11 @@ public class MeetingRoomsII {
     Arrays.sort(a, (x, y) -> x[0] - y[0]);  // Comparator.comparingInt(x -> x[0])
     Arrays.sort(a, (x, y) -> x[1] - y[1]); //  Comparator.comparingInt(x -> x[1])
     LinkedList<int[]> mergeInterval = new LinkedList<>();
-    mergeInterval.add(a[0]);
     int n = 1;
-    for (int i = 1; i < a.length; i++) {
-      if (mergeInterval.getLast()[0] < a[i][0] || mergeInterval.getLast()[1] <= a[i][0]) {
-        mergeInterval.add(a[i]);
-      } else {
+    for(int[] b : a) {
+      if(mergeInterval.isEmpty() || mergeInterval.getLast()[0] < b[0] || mergeInterval.getLast()[1] <= b[0]) {
+        mergeInterval.add(b);
+      }else{
         n++;
       }
     }
@@ -41,12 +40,12 @@ public class MeetingRoomsII {
   }
 
   public static void main(String[] args) {
-    System.out.println(findMinRooms(List.of(new Interval(0, 30), new Interval(5, 10), new Interval(15, 20))));
-    System.out.println(findMinRooms(List.of(new Interval(7, 10), new Interval(2, 4))));
-    System.out.println(findMinRooms(List.of(new Interval(0, 5), new Interval(1, 2), new Interval(6, 10))));
-    System.out.println(findMinRooms(List.of(new Interval(0, 5), new Interval(1, 2), new Interval(1, 10))));
-    System.out.println(findMinRooms(List.of(new Interval(0, 1), new Interval(0, 2), new Interval(2, 3), new Interval(1, 3), new Interval(2, 4), new Interval(3, 5))));
-    System.out.println(findMinRooms(List.of(new Interval(1, 18), new Interval(18, 23), new Interval(15, 29), new Interval(4, 15), new Interval(2, 11), new Interval(5, 13))));
+    System.out.println(findMinRooms(Arrays.asList(new Interval(0, 30), new Interval(5, 10), new Interval(15, 20))));
+    System.out.println(findMinRooms(Arrays.asList(new Interval(7, 10), new Interval(2, 4))));
+    System.out.println(findMinRooms(Arrays.asList(new Interval(0, 5), new Interval(1, 2), new Interval(6, 10))));
+    System.out.println(findMinRooms(Arrays.asList(new Interval(0, 5), new Interval(1, 2), new Interval(1, 10))));
+    System.out.println(findMinRooms(Arrays.asList(new Interval(0, 1), new Interval(0, 2), new Interval(2, 3), new Interval(1, 3), new Interval(2, 4), new Interval(3, 5))));
+    System.out.println(findMinRooms(Arrays.asList(new Interval(1, 18), new Interval(18, 23), new Interval(15, 29), new Interval(4, 15), new Interval(2, 11), new Interval(5, 13))));
 
     System.out.println();
 
